--- a/2-machine-learning/supervised-learning/Unet_trash.ipynb
+++ b/2-machine-learning/supervised-learning/Unet_trash.ipynb
@@ -18,17 +18,17 @@
       "metadata": {
         "id": "Zosh3d8qEw7c",
         "colab_type": "code",
-        "outputId": "8c4ddca0-fa24-4e93-d01a-4eb8b43cb39e",
+        "outputId": "af1b2408-74ef-482a-8ef5-602a6957d8bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 121
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -48,10 +48,10 @@
       "metadata": {
         "id": "nPaIfqCOE117",
         "colab_type": "code",
-        "outputId": "33af1379-aba7-4aa3-a9a7-ca1f31acf8b8",
+        "outputId": "6428f4f8-f42e-4979-f199-d17e8f3fc796",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 80
+          "height": 79
         }
       },
       "source": [
@@ -66,10 +66,21 @@
         "from keras.callbacks import ModelCheckpoint, LearningRateScheduler\n",
         "from keras import backend as keras\n",
         "\n",
+        "smooth = 1.\n",
+        "\n",
+        "def dice_coef(y_true, y_pred):\n",
+        "    y_true_f = keras.flatten(y_true)\n",
+        "    y_pred_f = keras.flatten(y_pred)\n",
+        "    intersection = keras.sum(y_true_f * y_pred_f)\n",
+        "    return (2. * intersection + smooth) / (keras.sum(y_true_f) + keras.sum(y_pred_f) + smooth)\n",
+        "\n",
+        "def dice_coef_loss(y_true, y_pred):\n",
+        "    return -dice_coef(y_true, y_pred)\n",
+        "\n",
         "\n",
         "def unet(pretrained_weights = None,input_size = (256,256,1)):\n",
         "    inputs = Input(input_size)\n",
-        "    \n",
+        "    '''\n",
         "    conv1 = Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(inputs)\n",
         "    conv1 = Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv1)\n",
         "    pool1 = MaxPooling2D(pool_size=(2, 2))(conv1)\n",
@@ -138,11 +149,11 @@
         "    conv9 = Conv2D(64, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv9)\n",
         "    conv9 = Conv2D(2, 3, activation = 'relu', padding = 'same', kernel_initializer = 'he_normal')(conv9)\n",
         "    conv10 = Conv2D(1, 1, activation = None)(conv9)\n",
-        "    '''\n",
-        "    model = Model(input = inputs, output = conv6)\n",
-        "\n",
-        "    model.compile(optimizer = Adam(lr = 3e-5), loss = 'binary_crossentropy', metrics = ['accuracy'])\n",
         "    \n",
+        "    model = Model(input = inputs, output = conv10)\n",
+        "\n",
+        "    #model.compile(optimizer = Adam(lr = 3e-5), loss = 'binary_crossentropy', metrics = ['accuracy'])\n",
+        "    model.compile(optimizer = Adam(lr = 3e-5), loss=dice_coef_loss, metrics=[dice_coef])\n",
         "    #model.summary()\n",
         "\n",
         "    if(pretrained_weights):\n",
@@ -150,7 +161,7 @@
         "\n",
         "    return model\n"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,6 +296,7 @@
         "        img = trans.resize(img,target_size)\n",
         "        img = np.reshape(img,img.shape+(1,)) if (not flag_multi_class) else img\n",
         "        img = np.reshape(img,(1,)+img.shape)\n",
+        "        #print(type(img))\n",
         "        yield img\n",
         "\n",
         "\n",
@@ -318,7 +330,9 @@
         "    for i,item in enumerate(npyfile):\n",
         "        img = labelVisualize(num_class,COLOR_DICT,item) if flag_multi_class else item[:,:,0]\n",
         "       #io.imsave(os.path.join(save_path,\"%d_predict.png\"%i),img)\n",
-        "        io.imsave(os.path.join(save_path,\"%d_predict.tif\"%i),img_as_uint(img))"
+        "        #print(img_as_uint(img)/255)\n",
+        "        io.imsave(os.path.join(save_path,\"%d_predict.tif\"%i),img_as_uint(img)/255)\n",
+        "        "
       ],
       "execution_count": 0,
       "outputs": []
@@ -328,10 +342,10 @@
       "metadata": {
         "id": "gbOJLBHvE7ap",
         "colab_type": "code",
-        "outputId": "360396aa-14cb-4354-d743-c149cba456c7",
+        "outputId": "1a59b3a3-bd25-4ac7-c461-645313246e5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 190
+          "height": 606
         }
       },
       "source": [
@@ -344,38 +358,59 @@
         "                    zoom_range=0.05,\n",
         "                    horizontal_flip=True,\n",
         "                    fill_mode='nearest')\n",
-        "myGene = trainGenerator(2,'/content/drive/My Drive/Colab Notebooks/car_dataset','train','train_masks',data_gen_args,save_to_dir = None)\n",
+        "myGene = trainGenerator(1,'/content/drive/My Drive/Colab Notebooks/car_dataset','train','train_masks',data_gen_args,save_to_dir = None)\n",
         "\n",
         "model = unet()\n",
         "model_checkpoint = ModelCheckpoint('unet_trash.hdf5', monitor='loss',verbose=1, save_best_only=True)\n",
-        "model.fit_generator(myGene,steps_per_epoch=300,epochs=6,callbacks=[model_checkpoint])\n",
+        "model.fit_generator(myGene,steps_per_epoch=250,epochs=3,callbacks=[model_checkpoint])\n",
         "\n",
         "testGene = testGenerator(\"/content/drive/My Drive/Colab Notebooks/car_dataset/test\")\n",
-        "results = model.predict_generator(testGene,100,verbose=1)\n",
+        "results = model.predict_generator(testGene,30,verbose=1)\n",
         "saveResult(\"/content/drive/My Drive/Colab Notebooks/car_dataset/test\",results)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:85: UserWarning: Update your `Model` call to the Keras 2 API: `Model(inputs=Tensor(\"in..., outputs=Tensor(\"co...)`\n"
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:96: UserWarning: Update your `Model` call to the Keras 2 API: `Model(inputs=Tensor(\"in..., outputs=Tensor(\"co...)`\n"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/6\n",
+            "Epoch 1/3\n",
             "Found 5088 images belonging to 1 classes.\n",
             "Found 5088 images belonging to 1 classes.\n",
-            "300/300 [==============================] - 2681s 9s/step - loss: 0.3344 - acc: 0.8504\n",
+            "250/250 [==============================] - 1830s 7s/step - loss: -1.7284 - dice_coef: 1.7284\n",
             "\n",
-            "Epoch 00001: loss improved from inf to 0.33443, saving model to unet_trash.hdf5\n",
-            "Epoch 2/6\n",
-            " 62/300 [=====>........................] - ETA: 35:25 - loss: 0.2015 - acc: 0.8809"
+            "Epoch 00001: loss improved from inf to -1.72840, saving model to unet_trash.hdf5\n",
+            "Epoch 2/3\n",
+            "250/250 [==============================] - 1868s 7s/step - loss: -1.8846 - dice_coef: 1.8846\n",
+            "\n",
+            "Epoch 00002: loss improved from -1.72840 to -1.88458, saving model to unet_trash.hdf5\n",
+            "Epoch 3/3\n",
+            "250/250 [==============================] - 1853s 7s/step - loss: -1.8687 - dice_coef: 1.8687\n",
+            "\n",
+            "Epoch 00003: loss did not improve from -1.88458\n",
+            "30/30 [==============================] - 61s 2s/step\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-ca148530c159>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mtestGene\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtestGenerator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/content/drive/My Drive/Colab Notebooks/car_dataset/test\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtestGene\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0msaveResult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/content/drive/My Drive/Colab Notebooks/car_dataset/test\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-3-033b738aa2a2>\u001b[0m in \u001b[0;36msaveResult\u001b[0;34m(save_path, npyfile, flag_multi_class, num_class)\u001b[0m\n\u001b[1;32m    132\u001b[0m        \u001b[0;31m#io.imsave(os.path.join(save_path,\"%d_predict.png\"%i),img)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m         \u001b[0;31m#print(img_as_uint(img)/255)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m         \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimsave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msave_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"%d_predict.tif\"\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimg_as_uint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    135\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/skimage/util/dtype.py\u001b[0m in \u001b[0;36mimg_as_uint\u001b[0;34m(image, force_copy)\u001b[0m\n\u001b[1;32m    452\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    453\u001b[0m     \"\"\"\n\u001b[0;32m--> 454\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muint16\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforce_copy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    455\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    456\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/skimage/util/dtype.py\u001b[0m in \u001b[0;36mconvert\u001b[0;34m(image, dtype, force_copy, uniform)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    276\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1.0\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1.0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 277\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Images of type float must be between -1 and 1.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    278\u001b[0m         \u001b[0;31m# floating point -> integer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m         \u001b[0;31m# use float type that can represent output integer type\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Images of type float must be between -1 and 1."
+          ]
         }
       ]
     }
